[gd_scene load_steps=8 format=3 uid="uid://bbaqpcqyjkgkr"]

[ext_resource type="Script" path="res://levels/menu.gd" id="1_c41f7"]
[ext_resource type="Texture2D" uid="uid://bphwxf2glq4lt" path="res://player/art/Main Ship - Base - Full health.png" id="2_cyc4q"]
[ext_resource type="PackedScene" uid="uid://c0r7wqbn43sha" path="res://background_bullet_spawner.tscn" id="2_o4xn3"]

[sub_resource type="Animation" id="Animation_q8ame"]
resource_name = "enter_ship"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(789, 2199), Vector2(829, 1130)]
}

[sub_resource type="Animation" id="Animation_44oya"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(789, 2199)]
}

[sub_resource type="Animation" id="Animation_i66jt"]
resource_name = "ship_idle"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(829, 1130), Vector2(769, 1150), Vector2(835, 1100), Vector2(916, 1150), Vector2(829, 1130)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbann"]
_data = {
"RESET": SubResource("Animation_44oya"),
"enter_ship": SubResource("Animation_q8ame"),
"ship_idle": SubResource("Animation_i66jt")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c41f7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BackgroundBulletSpawner" parent="." instance=ExtResource("2_o4xn3")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -33.0001
offset_right = 118.0
offset_bottom = 33.0
grow_vertical = 2
scale = Vector2(3.39273, 3.78571)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="ChooseStageButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Stage
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "enter_ship"
libraries = {
"": SubResource("AnimationLibrary_lbann")
}

[node name="ShipSprite" type="Sprite2D" parent="."]
position = Vector2(789, 2199)
scale = Vector2(10, 10)
texture = ExtResource("2_cyc4q")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ChooseStageButton" to="." method="_on_choose_stage_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
